--- a/.github/workflows/SkyHawk-SHRP-Reborn.yml
+++ b/.github/workflows/SkyHawk-SHRP-Reborn.yml
@@ -1,4 +1,4 @@
-name: SkyHawk [SHRP]
+name: SkyHawk [SHRP Reborn]
 
 on:
   workflow_dispatch:
@@ -8,13 +8,12 @@ on:
         required: true
         default: 'https://github.com/SHRP-Reborn/manifest.git'
       MANIFEST_BRANCH:
-        description: 'SHRP Manifest Branch'
+        description: 'SHRP Reborn Manifest Branch'
         required: true
         default: ''
         type: choice
         options:
         - shrp-12.1
-        - shrp-9.0
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
@@ -31,7 +30,7 @@ on:
         options:
         - boot
         - recovery
-        - vendorboot
+        - vendor_boot
       LDCHECK:
         description: 'Use LDCHECK'
         required: false
@@ -44,8 +43,8 @@ on:
 
 jobs:
   build:
-    name: Build SHRP by ${{ github.actor }}
-    runs-on: ubuntu-20.04
+    name: Build SHRP Reborn by ${{ github.actor }}
+    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -53,7 +52,7 @@ jobs:
       contents: write
     steps:
     - name: Check Out
-      uses: actions/checkout@v4
+      uses: actions/checkout@v4.2.2
       
     - name: Display Inputs
       run: |
@@ -85,8 +84,8 @@ jobs:
         sudo apt -y upgrade
         sudo apt -y install gperf gcc-multilib gcc-10-multilib g++-multilib g++-10-multilib libc6-dev lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc bc ccache lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk3.0-gtk3-dev libxml2 lzop pngcrush schedtool squashfs-tools imagemagick libbz2-dev lzma ncftp qemu-user-static libstdc++-10-dev libtinfo5 libgflags-dev libncurses5 python3
 
-    - name: Install OpenJDK
-      uses: actions/setup-java@v4
+    - name: Install Zulu OpenJDK
+      uses: actions/setup-java@v4.7.1
       with:
         distribution: 'zulu'
         java-version: '8'
@@ -155,7 +154,7 @@ jobs:
       run: |
         sudo apt-get install python2 python-is-python2
 
-    - name: Building SkyHawk
+    - name: Building SHRP Reborn
       run: |
         cd android-recovery
         source build/envsetup.sh
