--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -30,10 +30,9 @@ on:
         default: ''
         type: choice
         options:
-        - pbrp
-        - bootimage
-        - recoveryimage
-        - vendorbootimage
+        - boot
+        - recovery
+        - vendor_boot
       LDCHECK:
         description: 'Use LDCHECK'
         required: false
@@ -47,7 +46,7 @@ on:
 jobs:
   build:
     name: Build PBRP by ${{ github.actor }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -55,7 +54,7 @@ jobs:
       contents: write
     steps:
     - name: Check Out
-      uses: actions/checkout@v4
+      uses: actions/checkout@v4.2.2
 
     - name: Display Inputs
       run: |
@@ -87,8 +86,8 @@ jobs:
         sudo apt -y upgrade
         sudo apt -y install gperf gcc-multilib gcc-10-multilib g++-multilib g++-10-multilib libc6-dev lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc bc ccache lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk3.0-gtk3-dev libxml2 lzop pngcrush schedtool squashfs-tools imagemagick libbz2-dev lzma ncftp qemu-user-static libstdc++-10-dev libtinfo5 libgflags-dev libncurses5 python3
 
-    - name: Install OpenJDK
-      uses: actions/setup-java@v4
+    - name: Install Zulu OpenJDK
+      uses: actions/setup-java@v4.7.1
       with:
         distribution: 'zulu'
         java-version: '8'
@@ -157,7 +156,7 @@ jobs:
       run: |
         sudo apt-get install python2 python-is-python2
 
-    - name: Building PitchBlack
+    - name: Building PBRP
       run: |
         cd android-recovery
         source build/envsetup.sh
